stoat/src/snapshots/tui/stoat__test_harness__badge_active_styled.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: inject_claude_message
focused: #1 of 1
mode: normal
size: 40x10
---
[0m[36m┌────────────────────────────────────┐[0m [0m[90m│[0m
[0m[36m│[0m[7m [0m                                   [0m[36m│[0m [0m[90m│[0m
[0m[36m│[0m                                    [0m[36m│[0m [0m[90m│[0m
[0m[36m│[0m                                    [0m[36m│[0m [0m[90m│[0m
[0m[36m│[0m                                    [0m[36m│[0m [0m[90m│[0m
[0m[36m│[0m                                    [0m[36m│[0m [0m[90m│[0m
[0m[36m│[0m                                    [0m[36m│[0m [0m[90m│[0m
[0m[36m│[0m                                    [0m[36m│[0m [0m[90m│[0m
[0m[36m│[0m                                    [0m[36m│[0m [0m[90m│[0m
[0m[36m└────────────────────────────────────┘[0m [0m[90m│[0m
