stoat/src/snapshots/tui/stoat__test_harness__chat_replay_indented_lines_step_01_indented_text_styled.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: inject_claude_message
focused: #1 of 1
mode: normal
size: 80x24
---
[0m[36m┌──────────────────────────────────────────────────────────────────────────────┐[0m
[0m[36m│[0m[90mClaude[0m                                                                        [0m[36m│[0m
[0m[36m│[0m                                                                              [0m[36m│[0m
[0m[36m│[0m                                                                              [0m[36m│[0m
[0m[36m│[0m                                                                              [0m[36m│[0m
[0m[36m│[0m                                                                              [0m[36m│[0m
[0m[36m│[0m                                                                              [0m[36m│[0m
[0m[36m│[0m                                                                              [0m[36m│[0m
[0m[36m│[0m                                                                              [0m[36m│[0m
[0m[36m│[0m                                                                              [0m[36m│[0m
[0m[36m│[0m                                                                              [0m[36m│[0m
[0m[36m│[0m                                                                              [0m[36m│[0m
[0m[36m│[0m                                                                              [0m[36m│[0m
[0m[36m│[0m                                                                              [0m[36m│[0m
[0m[36m│[0m                                                                              [0m[36m│[0m
[0m[36m│[0m                                                                              [0m[36m│[0m
[0m[36m│[0m[97mhere is some code:[0m                                                            [0m[36m│[0m
[0m[36m│[0m[97m    fn foo() {[0m                                                                [0m[36m│[0m
[0m[36m│[0m[97m        bar();[0m                                                                [0m[36m│[0m
[0m[36m│[0m[97m    }[0m                                                                         [0m[36m│[0m
[0m[36m│[0m[97mend.[0m                                                                          [0m[36m│[0m
[0m[36m│[0m[90m------------------------------------------------------------------------------[0m[36m│[0m
[0m[36m│[0m[7m [0m                                                                             [0m[36m│[0m
[0m[36m└──────────────────────────────────────────────────────────────────────────────┘[0m
