stoat/src/snapshots/tui/stoat__test_harness__chat_replay_multiline_paragraphs_final.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: inject_claude_message
focused: #1 of 1
mode: normal
size: 80x24
---
┌──────────────────────────────────────────────────────────────────────────────┐
│Claude                                                                        │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│First paragraph.                                                              │
│                                                                              │
│Second paragraph.                                                             │
│                                                                              │
│Third paragraph.                                                              │
│------------------------------------------------------------------------------│
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
